--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -435,69 +435,171 @@ header {
         height: 4px;
       }
     }
-    .carousel-item {
-      .best-cards {
-        display: flex;
-        flex-wrap: wrap;
-        .shop-card {
-          width: 30%;
-          border: 1px solid #ebebeb;
-          .card-top {
-            display: flex;
-            justify-content: space-between;
-            img {
-              width: 80%;
-            }
-            .fa-heart {
-              margin: 20px;
-              color: red;
-            }
+    .best-cards {
+      display: flex;
+      flex-wrap: wrap;
+      .best-card {
+        width: 30%;
+        border: 1px solid #ebebeb;
+        .card-top {
+          display: flex;
+          justify-content: space-between;
+          img {
+            width: 80%;
           }
-          .card-content {
+          .fa-heart {
+            margin: 20px;
+            color: red;
+          }
+        }
+        .card-content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          h4 {
+            margin-left: 20px;
+            font-weight: 400;
+            font-size: 14px;
+          }
+          .price {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            h4 {
-              margin-left: 20px;
-              font-weight: 400;
+            gap: 60px;
+            .new {
+              color: #fe4c50;
+              font-weight: 600;
               font-size: 14px;
             }
-            .price {
-              display: flex;
-              gap: 60px;
-              .new {
-                color: #fe4c50;
-                font-weight: 600;
-                font-size: 14px;
-              }
-              p {
-                color: #d8d8d8;
-              }
+            p {
+              color: #d8d8d8;
+            }
+          }
+          a {
+            background-color: #fe4c50;
+            opacity: 0;
+            color: white;
+            text-decoration: none;
+            font-size: 12px;
+            font-weight: 600;
+            padding: 10px 70px;
+          }
+        }
+        transition: all 1s;
+        &:hover {
+          transform: scale(1.1);
+          .card-content {
+            padding: 0 10px;
+            h4 {
+              color: #b5aec4;
             }
             a {
-              background-color: #fe4c50;
-              opacity: 0;
-              color: white;
-              text-decoration: none;
-              font-size: 12px;
-              font-weight: 600;
-              padding: 10px 70px;
+              opacity: 1;
             }
           }
-          transition: all 1s;
-          &:hover {
-            transform: scale(1.1);
-            .card-content {
-              padding: 0 10px;
-              h4 {
-                color: #b5aec4;
-              }
-              a {
-                opacity: 1;
-              }
-            }
+        }
+      }
+      @media screen and (min-width: 300px) and (max-width: 600px) {
+        flex-direction: column;
+        .best-card {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+#form-table {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .form {
+      display: flex;
+      gap: 20px;
+      input {
+        padding: 10px 50px;
+        background-color: #d8d8d8;
+        border: none;
+      }
+    }
+    .add {
+      border: 1px solid blue;
+      border: 1px solid transparent;
+      color: white;
+      padding: 10px 40px;
+    }
+  }
+  .table {
+    .search-sort {
+      display: flex;
+      align-items: center;
+      input {
+        border: none;
+        background-color: #d8d8d8;
+      }
+      .sort {
+        border: 1px solid blue;
+        border: 1px solid transparent;
+        color: white;
+        padding: 10px 40px;
+      }
+    }
+    table {
+      border-collapse: collapse;
+      border: 1px solid red;
+      thead {
+        th {
+          border: 1px solid red;
+          padding: 10px;
+        }
+      }
+      tbody {
+        td {
+          border: 1px solid red;
+          padding: 10px;
+          img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
           }
+        }
+      }
+    }
+  }
+}
+#blog {
+  .blog {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    .heading {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      h1 {
+        font-weight: 500;
+        font-size: 40px;
+      }
+      .line {
+        background-color: #fe4c50;
+        width: 100px;
+        height: 4px;
+      }
+    }
+    .blog-cards {
+      display: flex;
+      gap: 50px;
+      .blog-card {
+        width: 30%;
+        img {
+          width: 100%;
+        }
+      }
+      @media screen and (min-width: 300px) and (max-width: 600px) {
+        flex-direction: column;
+        .blog-card {
+          width: 100%;
         }
       }
     }
